--- a/backend/package.json
+++ b/backend/package.json
@@ -21,8 +21,8 @@
         "joi": "^18.0.2",
         "jsonwebtoken": "^9.0.3",
         "multer": "^2.0.2",
-        "mysql2": "^3.15.3",
-        "sequelize": "^6.37.7"
+        "sequelize": "^6.37.7",
+        "sqlite3": "^5.1.7"
     },
     "devDependencies": {
         "nodemon": "^3.1.11"
