--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,20 +1,33 @@
 upstream backend_api {
-    server backend:3000; # Tên service trong docker-compose
+    # Trong Docker, ta gọi tên service là "backend" thay vì "localhost"
+    # Port 3000 là port nội bộ của container backend
+    server backend:3000;
 }
 
 server {
     listen 80;
+    server_name sahafa.dungcan.id.vn; # Thay tên miền của bạn vào đây
 
-    # Frontend (Vue build ra file tĩnh)
+    # --- XỬ LÝ FRONTEND (VueJS) ---
     location / {
+        # Nginx trong Docker sẽ phục vụ trực tiếp file đã build
         root /usr/share/nginx/html;
         index index.html index.htm;
-        try_files $uri $uri/ /index.html; # Quan trọng cho Vue Router
+        
+        # Quan trọng cho Vue Router (Single Page App)
+        # Nếu không tìm thấy file, nó sẽ trả về index.html để Vue xử lý routing
+        try_files $uri $uri/ /index.html;
     }
 
-    # Backend API
+    # --- XỬ LÝ BACKEND (API) ---
     location /api/ {
+        # Chuyển tiếp request bắt đầu bằng /api/ sang container backend
         proxy_pass http://backend_api;
+        
+        # Các header cần thiết để Backend nhận diện đúng client
         proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
     }
 }
