fix: http problem

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,33 +1,73 @@
+# upstream cho backend container (docker-compose service name = backend)
 upstream backend_api {
-    # Trong Docker, ta gọi tên service là "backend" thay vì "localhost"
-    # Port 3000 là port nội bộ của container backend
     server backend:3000;
+    # nếu muốn cân bằng nhiều backend: thêm server backend2:3000;
 }
 
+# HTTP -> redirect sang HTTPS
 server {
     listen 80;
-    server_name sahafa.dungcan.id.vn; # Thay tên miền của bạn vào đây
+    server_name sahafa.dungcan.id.vn;
 
-    # --- XỬ LÝ FRONTEND (VueJS) ---
+    # Optional: Let's redirect everything to https
+    return 301 https://$host$request_uri;
+}
+
+# HTTPS server
+server {
+    listen 443 ssl http2;
+    server_name sahafa.dungcan.id.vn;
+
+    # --- SSL: đổi đường dẫn file bên dưới ---
+    ssl_certificate /etc/ssl/cf-origin.crt;    # ví dụ: cert Cloudflare origin hoặc certbot fullchain
+    ssl_certificate_key /etc/ssl/cf-origin.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 10m;
+
+    # Recommended security headers (optional nhưng khuyên dùng)
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Content-Type-Options nosniff;
+    add_header Referrer-Policy "no-referrer-when-downgrade";
+
+    # CHỈ ĐỂ SIZE UPLOAD LỚN HƠN NẾU CẦN
+    client_max_body_size 50M;
+
+    # Static frontend (Vue SPA)
+    root /usr/share/nginx/html;
+    index index.html index.htm;
+
     location / {
-        # Nginx trong Docker sẽ phục vụ trực tiếp file đã build
-        root /usr/share/nginx/html;
-        index index.html index.htm;
-        
-        # Quan trọng cho Vue Router (Single Page App)
-        # Nếu không tìm thấy file, nó sẽ trả về index.html để Vue xử lý routing
+        # SPA fallback cho Vue Router
         try_files $uri $uri/ /index.html;
+        # optional: cache static assets for a long time
+        location ~* \.(?:css|js|jpg|jpeg|gif|png|svg|ico|woff2?|ttf|eot)$ {
+            try_files $uri =404;
+            access_log off;
+            expires 30d;
+            add_header Cache-Control "public";
+        }
     }
 
-    # --- XỬ LÝ BACKEND (API) ---
+    # API proxy
     location /api/ {
-        # Chuyển tiếp request bắt đầu bằng /api/ sang container backend
-        proxy_pass http://backend_api;
-        
-        # Các header cần thiết để Backend nhận diện đúng client
+        proxy_pass http://backend_api;   # dùng upstream phía trên
+        proxy_http_version 1.1;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $server_name;
+        proxy_set_header X-Forwarded-Server $hostname;
+
+        proxy_set_header Connection "";
+        proxy_redirect off;
+
+        # timeout tăng đỡ lỗi khi backend xử lý lâu
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 120s;
+        proxy_read_timeout 120s;
     }
 }
