--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -19,8 +19,8 @@ server {
     server_name sahafa.dungcan.id.vn;
 
     # --- SSL: đổi đường dẫn file bên dưới ---
-    ssl_certificate /etc/ssl/cf-origin.crt;    # ví dụ: cert Cloudflare origin hoặc certbot fullchain
-    ssl_certificate_key /etc/ssl/cf-origin.key;
+    ssl_certificate /etc/nginx/ssl/cf-origin.crt;    # ví dụ: cert Cloudflare origin hoặc certbot fullchain
+    ssl_certificate_key /etc/nginx/ssl/cf-origin.key;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
