--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -70,4 +70,12 @@ server {
         proxy_send_timeout 120s;
         proxy_read_timeout 120s;
     }
+
+    # Proxy uploads (ảnh từ backend)
+    location /uploads/ {
+        proxy_pass http://backend_api;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
 }
