Refactor code structure for improved readability and maintainability

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,7 +1,6 @@
 # upstream cho backend container (docker-compose service name = backend)
 upstream backend_api {
     server backend:3000;
-    # nếu muốn cân bằng nhiều backend: thêm server backend2:3000;
 }
 
 # HTTP -> redirect sang HTTPS
@@ -26,7 +25,7 @@ server {
     ssl_session_cache shared:SSL:10m;
     ssl_session_timeout 10m;
 
-    # Recommended security headers (optional nhưng khuyên dùng)
+    # Recommended security header
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     add_header X-Frame-Options SAMEORIGIN;
     add_header X-Content-Type-Options nosniff;
